# storage-kiosk

./: .env.example  README.md  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: codeql.yml
pages/: rules.txt
