[tool.poetry]
name = "storage-kiosk"
version = "0.1.0"
description = ""
authors = ["Andrew LeCody <andrew@beyondweb.net>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
rich = "^12.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
